Changes made under models

--- a/destiny/templates/Flight.html
+++ b/destiny/templates/Flight.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'plan1.html' %}
 {% load static %}
 {% block body %}
 <div class=" row  p-2 text-bg-primary">
@@ -20,9 +20,9 @@
 
 </div>
    <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="{% url 'destiny:form' %}" class="btn btn-primary">Go somewhere</a>
+
+
+    <a href="{% url 'destiny:form' %}" class="btn btn-primary">BOOK NOW</a>
   </div>
 </div>
 
