--- a/destiny/templates/Nissan.html
+++ b/destiny/templates/Nissan.html
@@ -1,6 +1,33 @@
-{% extends 'layout.html' %}
+{% extends 'plan1.html' %}
 {% load static %}
 {% block body %}
+<div class=" row  p-2 text-bg-primary">
+{% for lists in list %}
+
+<div class="col">
+
+<div class="card" style="width: 18rem;">
+  <div class="card" style="width: 18rem;">
+
+  <div class="card-header">
+      <p><b>Destination:</b></p>{{ lists.title }}
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><p><b>SeatNo:</b></p>{{ lists.flightNo}}</li>
+    <li class="list-group-item"><p><b>DepartureTime:</b></p>{{ lists.departureTime}}</li>
+    <li class="list-group-item"><p><b>TravellingTime:</b></p>{{ lists.timeTaken}}</li>
+  </ul>
+
+</div>
+   <div class="card-body">
 
 
+    <a href="{% url 'destiny:form' %}" class="btn btn-primary">BOOK NOW</a>
+  </div>
+</div>
+
+</div>
+{% endfor %}
+
+</div>
 {% endblock %}
