--- a/destiny/templates/layout.html
+++ b/destiny/templates/layout.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="{% static 'css/slick.css'%}">
     <link rel="stylesheet" href="{% static 'css/slicknav.css'%}">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
@@ -37,7 +38,7 @@
 
 <body>
     <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+{#            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>#}
         <![endif]-->
 
     <!-- header-start -->
@@ -46,33 +47,42 @@
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid">
                     <div class="header_bottom_border">
-                        <div class="row align-items-center">
-                            <div class="col-xl-2 col-lg-2">
-                                <div class="logo">
-                                    <a  href="{% url 'destiny:index' %}">
-                                        <img src="img/logo.png" alt="">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-xl-6 col-lg-6">
-                                <div class="main-menu  d-none d-lg-block">
+                        <div class="d-flex align-items-center">
+
+
+{#                            <div class="col-xl-2 col-lg-2">#}
+{##}
+{#                                <div class="logo">#}
+{##}
+{#                                     <img src="{% static 'images/logo.jpg' %}" alt="">#}
+{##}
+{#                                </div>#}
+{#                            </div>#}
+                             <a class="navbar-brand" href="#">
+        <img src="{% static 'images/logo.jpg' %}" alt="" width="100px" height="80px" class="d-inline-block align-center rounded">
+
+    </a>
+                            <div class="navbar navbar-expand-lg navbar-light bg-light">
+                                <div class="main-menu  d-none d-lg-flex">
+
                                     <nav>
                                         <ul id="navigation">
+{#                                             <img src="{% static 'images/flight.jpg' %}" alt="">#}
                                             <li><a class="nav-link"  href="{% url 'destiny:home' %}">home</a></li>
                                             <li><a class="nav-link" href="{% url 'destiny:about' %}">About</a></li>
                                             <li><a class="nav-link" href="{% url 'destiny:travelDestinations' %}">Destination</a></li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                            <li><a href="#">pages </a>
                                                 <ul class="submenu">
                                                         <li><a class="nav-link" href="{% url 'destiny:destination_details' %}">Destinations details</a></li>
                                                         <li><a class="nav-link " href="{% url 'destiny:elements' %}">elements</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a class="nav-link " href="{% url 'destiny:blog' %}">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a class="nav-link " href="{% url 'destiny:blog' %}">blog</a></li>
-                                                    <li><a class="nav-link " href="{% url 'destiny:singleBlog' %}">single-blog</a></li>
-                                                </ul>
-                                            </li>
+{#                                            <li><a class="nav-link " href="{% url 'destiny:blog' %}">blog </a>#}
+{#                                                <ul class="submenu">#}
+{#                                                    <li><a class="nav-link " href="{% url 'destiny:blog' %}">blog</a></li>#}
+{#                                                    <li><a class="nav-link " href="{% url 'destiny:singleBlog' %}">single-blog</a></li>#}
+{#                                                </ul>#}
+{#                                            </li>#}
                                             <li><a class="nav-link" href="{% url 'destiny:contact' %}">Contact</a>
 
                                             </li>
@@ -85,39 +95,52 @@
                                                 </ul>
                                             </li>
                                             <li><a class="nav-link" href="{% url 'destiny:plan' %}">Plan</a></li>
+                                            <li><form class="d-flex" method="get" role="search" action="{% url 'destiny:search' %}">
+                                                 <input class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search">
+                                                 <button class="btn btn-outline-success" type="submit">Search</button>
+                                              </form></li>
                                         </ul>
+
                                     </nav>
+
                                 </div>
+
                             </div>
-                            <div class="col-xl-4 col-lg-4 d-none d-lg-block">
-                                <div class="social_wrap d-flex align-items-center justify-content-end">
-                                    <div class="number">
-                                        <p> <i class="fa fa-phone"></i> 10(256)-928 256</p>
-                                    </div>
-                                    <div class="social_links d-none d-xl-block">
-                                        <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
-                                        </ul>
-                                    </div>
-                                </div>
+
+
+        </div>
+{#                            <div class="col-xl-4 col-lg-4 d-none d-lg-block">#}
+{#                                <div class="social_wrap d-flex align-items-center justify-content-end">#}
+{#                                    <div class="number">#}
+{#                                        <p> <i class="fa fa-phone"></i> +254746589039</p>#}
+{#                                    </div>#}
+{#                                    <div class="social_links d-none d-xl-block">#}
+{#                                        <ul>#}
+{#                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>#}
+{#                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>#}
+{#                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>#}
+{#                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>#}
+{#                                        </ul>#}
+{#                                    </div>#}
+{#                                </div>#}
                             </div>
-                            <div class="seach_icon">
-                                <a data-toggle="modal" data-target="#exampleModalCenter" href="#">
-                                    <i class="fa fa-search"></i>
-                                </a>
-                            </div>
-                            <div class="col-12">
-                                <div class="mobile_menu d-block d-lg-none"></div>
-                            </div>
-                        </div>
+{#                            <div class="seach_icon">#}
+{#                                <a data-toggle="modal" data-target="#exampleModalCenter" href="#">#}
+{#                                    <i class="fa fa-search"></i>#}
+{#                                </a>#}
+{#                            </div>#}
+{#                            <div class="col-12">#}
+{#                                <div class="mobile_menu d-block d-lg-none"></div>#}
+{#                            </div>#}
+{#                        </div>#}
                     </div>
 
                 </div>
             </div>
-        </div>
+
+
+
+{#            </div>#}
     </header>
     <!-- header-end -->
 
@@ -126,15 +149,17 @@
         <div class="slider_active owl-carousel">
             <div class="single_slider  d-flex align-items-center slider_bg_1 overlay">
                 <div class="container">
+                    {% for contents in more %}
                     <div class="row align-items-center">
                         <div class="col-xl-12 col-md-12">
                             <div class="slider_text text-center">
-                                <h3>Indonesia</h3>
-                                <p>Pixel perfect design with awesome contents</p>
-                                <a href="#" class="boxed-btn3">Explore Now</a>
+                                <h3 class="text-capitalize text-black">{{ contents.city }}</h3>
+                                <p class="text-danger">{{ contents.about}}</p>
+                                <a href="{% url 'destiny:explore' %}" class="boxed-btn3">Explore Now</a>
                             </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
             </div>
             <div class="single_slider  d-flex align-items-center slider_bg_2 overlay">
@@ -142,7 +167,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-12 col-md-12">
                             <div class="slider_text text-center">
-                                <h3>Australia</h3>
+                                <h3>Nairobi</h3>
                                 <p>Pixel perfect design with awesome contents</p>
                                 <a href="#" class="boxed-btn3">Explore Now</a>
                             </div>
@@ -155,7 +180,21 @@
                     <div class="row align-items-center">
                         <div class="col-xl-12 col-md-12">
                             <div class="slider_text text-center">
-                                <h3>Switzerland</h3>
+                                <h3>Mombasa</h3>
+                                <p>Pixel perfect design with awesome contents</p>
+                                <a href="#" class="boxed-btn3">Explore Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                 <div class="single_slider  d-flex align-items-center slider_bg_3 overlay">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-xl-12 col-md-12">
+                            <div class="slider_text text-center">
+                                <h3>Kisumu</h3>
                                 <p>Pixel perfect design with awesome contents</p>
                                 <a href="#" class="boxed-btn3">Explore Now</a>
                             </div>
