--- a/destiny/templates/plan.html
+++ b/destiny/templates/plan.html
@@ -1,137 +1,38 @@
+
+{% extends 'plan1.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% block body %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Planning</title>
-    <!-- Add your CSS links or stylesheets here -->
 
-      <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-    <!-- Place favicon.ico in the root directory -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}">
-    <link rel="stylesheet" href="{% static 'css/magnific-popup.css'%}">
-    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css'%}">
-    <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
-    <link rel="stylesheet" href="{% static 'css/nice-select.css'%}">
-    <link rel="stylesheet" href="{% static 'css/flaticon.css'%}">
-    <link rel="stylesheet" href="{% static 'css/gijgo.css'%}">
-    <link rel="stylesheet" href="{% static 'css/animate.css'%}">
-    <link rel="stylesheet" href="{% static 'css/slick.css'%}">
-    <link rel="stylesheet" href="{% static 'css/slicknav.css'%}">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
-
-    <link rel="stylesheet" href="{% static 'css/style.css'%}">
-
-</head>
-
-<body>
     <!-- Navigation Bar -->
- <header>
-        <div class="header-area ">
-            <div id="sticky-header" class="main-header-area">
-                <div class="container-fluid">
-                    <div class="header_bottom_border">
-                        <div class="row align-items-center">
-                            <div class="col-xl-2 col-lg-2">
-                                <div class="logo">
-                                    <a  href="{% url 'destiny:index' %}">
-                                        <img src="img/logo.png" alt="">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-xl-6 col-lg-6">
-                                <div class="main-menu  d-none d-lg-block">
-                                    <nav>
-                                        <ul id="navigation">
-                                            <li><a class="nav-link"  href="{% url 'destiny:home' %}">home</a></li>
-                                            <li><a class="nav-link" href="{% url 'destiny:about' %}">About</a></li>
-                                            <li><a class="nav-link" href="{% url 'destiny:travelDestinations' %}">Destination</a></li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                        <li><a class="nav-link" href="{% url 'destiny:destination_details' %}">Destinations details</a></li>
-                                                        <li><a class="nav-link " href="{% url 'destiny:elements' %}">elements</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a class="nav-link " href="{% url 'destiny:blog' %}">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a class="nav-link " href="{% url 'destiny:blog' %}">blog</a></li>
-                                                    <li><a class="nav-link " href="{% url 'destiny:singleBlog' %}">single-blog</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a class="nav-link" href="{% url 'destiny:contact' %}">Contact</a>
 
-                                            </li>
-                                            <li><a class="nav-link" href="{% url 'destiny:nissan' %}">Book</a>
-                                            <ul class="submenu">
-                                                    <li><a class="nav-link " href="{% url 'destiny:flight' %}">Flight</a></li>
-                                                    <li><a class="nav-link " href="{% url 'destiny:nissan' %}">Nissan</a></li>
-                                                <li><a class="nav-link " href="{% url 'destiny:bus' %}">Bus</a></li>
-                                                <li><a class="nav-link " href="{% url 'destiny:private' %}">Private</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a class="nav-link" href="{% url 'destiny:plan' %}">Plan</a></li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-                            <div class="col-xl-4 col-lg-4 d-none d-lg-block">
-                                <div class="social_wrap d-flex align-items-center justify-content-end">
-                                    <div class="number">
-                                        <p> <i class="fa fa-phone"></i> 10(256)-928 256</p>
-                                    </div>
-                                    <div class="social_links d-none d-xl-block">
-                                        <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="seach_icon">
-                                <a data-toggle="modal" data-target="#exampleModalCenter" href="#">
-                                    <i class="fa fa-search"></i>
-                                </a>
-                            </div>
-                            <div class="col-12">
-                                <div class="mobile_menu d-block d-lg-none"></div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </header>
 
     <!-- Planning Section -->
     <section id="planning">
         <div class="container">
-            <h2>Travel Planning</h2>
-            <p>
+            <h2 class="text-black">Travel Planning</h2>
+            <p class="text-white black-bg">
                 Plan your dream vacation with us. Choose your destination, find the perfect accommodation,
                 and explore exciting activities.
             </p>
 
             <!-- Planning Form -->
-            <form action="/submit-planning" method="post">
+            <form action="" method="POST">
+
+                {% csrf_token %}
+
+    {{ form.as_p }}
+    <input  type="submit" value="Plan Now" class="btn btn-outline-success mt-2">
                 <!-- Add your form fields here (destination, dates, etc.) -->
-                <label for="destination">Destination:</label>
-                <input type="text" id="destination" name="destination" required>
-
-                <label for="dates">Travel Dates:</label>
-                <input type="text" id="dates" name="dates" placeholder="MM/DD/YYYY" required>
-
-                <!-- Add more form fields as needed -->
-
-                <button type="submit">Plan My Trip</button>
+{#                <label for="destination">Destination:</label>#}
+{#                <input type="text" id="destination" name="destination" required>#}
+{##}
+{#                <label for="dates">Travel Dates:</label>#}
+{#                <input type="text" id="dates" name="dates" placeholder="MM/DD/YYYY" required>#}
+{##}
+{#                <!-- Add more form fields as needed -->#}
+{##}
+{#                <button type="submit">Plan My Trip</button>#}
             </form>
         </div>
     </section>
@@ -142,48 +43,4 @@
     </footer>
 
     <!-- Add your JavaScript scripts or links here if needed -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/scrollIt.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/nice-select.min.js"></script>
-    <script src="js/jquery.slicknav.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/gijgo.min.js"></script>
-    <script src="js/slick.min.js"></script>
-
-
-
-    <!--contact js-->
-    <script src="js/contact.js"></script>
-    <script src="js/jquery.ajaxchimp.min.js"></script>
-    <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/mail-script.js"></script>
-
-
-    <script src="js/main.js"></script>
-    <script>
-        $('#datepicker').datepicker({
-            iconsLibrary: 'fontawesome',
-            icons: {
-             rightIcon: '<span class="fa fa-caret-down"></span>'
-         }
-        });
-    </script>
-</body>
-
-</html>
+{% endblock %}
